<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="action_about">About</string>
    <string name="start_game">Start Game</string>
    <string name="new_game">New Game</string>
    <string name="wins">%1s Wins</string>
    <string name="no_player_won">Game is over. None of the players won</string>
    <string name="proceed_to_leader_board">Proceed To Leader Board</string>
    <string name="top_player">Top Players</string>
    <string name="player1_name_hint">Enter player1 name</string>
    <string name="player2_name_hint">Enter player2 name</string>
    <string name="error_player_name_empty">Player names can not be empty</string>
    <string name="score">Score</string>
    <string name="cross">X</string>
    <string name="naught">0</string>
    <string name="player_score">Score : %1d</string>
    <string name="no_players">There are no players yet</string>
    <!--Titles of Fragments-->
    <string name="about_fragment">About Tic Tac Toe</string>
    <string name="gameboard_fragment">Game Board</string>
    <string name="leader_board_fragment">Leader Board</string>
    <string name="players_login_fragment">Players Login</string>
</resources>
