<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editText_player1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/player1_name_hint"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText_player2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_vertical_spacing"
        android:hint="@string/player2_name_hint"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/button_start_game"
        style="@style/GreenButton"
        android:layout_marginTop="@dimen/view_vertical_spacing"
        android:text="@string/start_game" />

</LinearLayout>